# AuthService

./: .env  Dockerfile  README.md  alembic.ini  auth.db  docker-compose.yml  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2fe0eb60e69e_init.py  5073597dc07b_upgrade_models.py  bb173df3a0d0_test_revision.py
database/: models.py  sqlite.py
db/: models.py  postgresql.py  sqlite.py
docs/: .$Диаграмма без названия.drawio.bkp  .$Диаграмма без названия.drawio.dtmp  Диаграмма без названия.drawio
migrations/: env.py
migrations/versions/: 2c1a39801d67_init.py  8d609dbc2703_описание_изменений.py  c5468db47141_init.py
schemas/: users.py
urls/: auth.py
views/: auth.py
