[tool.poetry]
name = "fastapi-service"
version = "0.1.0"
description = ""
authors = ["maestro089 <egor-karpov08@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
alembic = "^1.13.1"
psycopg = "^3.1.17"
psycopg-binary = "^3.1.17"
psycopg2 = "^2.9.9"
pydantic = {extras = ["dotenv", "email"], version = "^2.11.7"}
python-dotenv = "^1.1.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"